# rag-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: code_quality.yml
src/main/app/: app.py
src/main/app/business/util/ml_logger/: logger.py
src/test/app/: test_default.py
src/test/app/business/util/: test_logger.py
