[project]
name = "rag-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "qdrant-client==1.14.2",
    "ollama==0.5.1",
]

[metadata]
name = "src"

[tool.pytest.ini_options]
pythonpath = [".", "src/main/app"]
env = [
    "OLLAMA_HOST = localhost:8080"
]

[tool.coverage.run]
source = ['src/main/app']
relative_files = true
omit = ['*test*']

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
test = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "iniconfig==1.1.1",
    "coverage==7.2.2"
]

[tool.ruff]
line-length = 1
exclude = [
  ".venv",
  "venv",
  "env",
  "build",
  "dist",
  "__pycache__",
  ".git",
  ".tox",
  "node_modules"
]
