[project]
name = "rag-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-ollama==0.3.3",
    "langchain-qdrant==0.2.0",
    "qdrant-client==1.14.2",
    "ollama==0.5.1",
    "hatchling==1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[metadata]
name = "src"

[tool.pytest.ini_options]
pythonpath = [".", "src/main/app"]
env = [
    "OLLAMA_HOST = localhost:8080"
]

[tool.coverage.run]
source = ['src/main/app']
relative_files = true
omit = ['*test*']

[tool.ruff]
line-length = 121
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  ".git"
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
test = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "iniconfig==1.1.1",
    "coverage==7.2.2"
]
